--- a/Controls/CtCertificate.xaml
+++ b/Controls/CtCertificate.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PriyemnayaKomissiya.Controls" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
-             d:DesignHeight="315" d:DesignWidth="803">
+             d:DesignHeight="315" d:DesignWidth="800">
     <StackPanel Visibility="Visible" Tag="HIddenField" Background="#FFF3F4F8">
-        <Grid MinHeight="30" Height="29">
+        <Grid MinHeight="30" Height="29" Margin="10,0,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="30"/>
