--- a/Controls/Certificate.xaml
+++ b/Controls/Certificate.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PriyemnayaKomissiya.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="670" d:DesignWidth="800" Background="#FFF3F4F8" Loaded="UserControl_Loaded">
+             d:DesignHeight="670" d:DesignWidth="800" Background="#FFF3F4F8">
     <StackPanel Visibility="Visible" Tag="VisibleField" Height="605" Margin="20,0">
         <Grid MinHeight="30" Height="29">
             <Grid.ColumnDefinitions>
@@ -37,35 +37,35 @@
             <Line X1="350" Y1="0" X2="505" Y2="0" Stroke="{StaticResource 94A1BB}" Margin="0,10,0,0" Grid.ColumnSpan="3"/>
 
             <TextBlock Text="КОЛИЧЕСТВО '1'" Margin="10,10,10,51" Grid.Row="1"/>
-            <TextBox Margin="0,28,5,7" Style="{DynamicResource TextBox}" Grid.Row="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" />
+            <TextBox Text="0" Margin="0,28,5,7" Style="{DynamicResource TextBox}" Grid.Row="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '2'" Margin="10,10,10,50" Grid.Row="2"/>
-            <TextBox Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '3'" Margin="10,10,10,51" Grid.Row="3"/>
-            <TextBox Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="3" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="3" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '4'" Margin="10,10,10,50" Grid.Row="4"/>
-            <TextBox Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="4" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="4" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '5'" Margin="10,10,10,50" Grid.Row="5"/>
-            <TextBox Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="5" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="5" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '6'" Margin="10,10,10,51" Grid.Row="1"  Grid.Column="1"/>
-            <TextBox Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="1" Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="1" Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '7'" Margin="10,10,10,50" Grid.Row="2"  Grid.Column="1"/>
-            <TextBox Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="2"  Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="2"  Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '8'" Margin="10,10,10,51" Grid.Row="3"  Grid.Column="1"/>
-            <TextBox Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="3"  Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="3"  Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '9'" Margin="10,10,10,50" Grid.Row="4"  Grid.Column="1"/>
-            <TextBox Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="4"  Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="4"  Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '10'" Margin="10,10,10,50" Grid.Row="5"  Grid.Column="1"/>
-            <TextBox Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="5"  Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="5"  Grid.Column="1" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '11'" Margin="10,10,10,51" Grid.Row="1"  Grid.Column="2"/>
-            <TextBox Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="1" Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="1" Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '12'" Margin="10,10,10,50" Grid.Row="2"  Grid.Column="2"/>
-            <TextBox Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="2"  Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="2"  Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '13'" Margin="10,10,10,50" Grid.Row="3"  Grid.Column="2"/>
-            <TextBox Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="3"  Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="3"  Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '14'" Margin="10,10,10,51" Grid.Row="4"  Grid.Column="2"/>
-            <TextBox Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="4" Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,7" Style="{DynamicResource TextBox}" Grid.Row="4" Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
             <TextBlock Text="КОЛИЧЕСТВО '15'" Margin="10,10,10,50" Grid.Row="5"  Grid.Column="2"/>
-            <TextBox Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="5"  Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto"/>
+            <TextBox Text="0" Margin="0,28,10,6" Style="{DynamicResource TextBox}" Grid.Row="5"  Grid.Column="2" PreviewTextInput="TextBox_PreviewTextInput" TextChanged="TextBox_GetMarksSum" Width="Auto" MouseLeftButtonUp="TextBox_MouseLeftButtonUp"/>
         </Grid>
         <TextBlock x:Name="tblTotalMarks" VerticalAlignment="Center" HorizontalAlignment="Center" Text="Общее количество отметок: 0"  Foreground="{StaticResource 94A1BB}"/>
         <Line X1="0" Y1="5" X2="500" Y2="5" Stroke="{StaticResource 94A1BB}" Width="500" Height="19" Margin="166,0,167,0"/>
