--- a/Controls/Certificate.xaml
+++ b/Controls/Certificate.xaml
@@ -16,7 +16,7 @@
             <Button x:Name="btClose" Click="Button_CloseNote" Grid.Column="1" Style="{DynamicResource Button_Close}"/>
         </Grid>
         <Line X1="0" Y1="0" X2="2000" Y2="0" Height="10" Stroke="{StaticResource 94A1BB}"/>
-        <TextBlock Text="СЕРИЯ АТТЕСТАТА" Width="469"/>
+        <TextBlock Text="НОМЕР И СЕРИЯ ДОКУМЕНТА" Width="469"/>
         <TextBox x:Name="tbSeries" Style="{DynamicResource TextBox}" TextChanged="ClearError"  Width="502"/>
         <Grid x:Name="grMarks" Margin="0,10,0,0" Height="400" Width="504">
             <Grid.ColumnDefinitions>
@@ -32,7 +32,7 @@
                 <RowDefinition Height="89*"/>
                 <RowDefinition Height="89*"/>
             </Grid.RowDefinitions>
-            <TextBlock Text="ОЦЕНКИ В АТТЕСТАТЕ" Foreground="{StaticResource ResourceKey=94A1BB}" HorizontalAlignment="Center" Width="504" TextAlignment="Center" Grid.ColumnSpan="3"/>
+            <TextBlock Text="ОТМЕТКИ В ДОКУМЕНТЕ" Foreground="{StaticResource ResourceKey=94A1BB}" HorizontalAlignment="Center" Width="504" TextAlignment="Center" Grid.ColumnSpan="3"/>
             <Line X1="0" Y1="0" X2="150" Y2="0" Stroke="{StaticResource 94A1BB}" Margin="0,10,0,0" Grid.ColumnSpan="3"/>
             <Line X1="350" Y1="0" X2="505" Y2="0" Stroke="{StaticResource 94A1BB}" Margin="0,10,0,0" Grid.ColumnSpan="3"/>
 
