--- a/View/MainWorkingWindow.xaml
+++ b/View/MainWorkingWindow.xaml
@@ -8,7 +8,7 @@
         xmlns:uc="clr-namespace:PriyemnayaKomissiya.Controls"
         mc:Ignorable="d"
         Title="Приемная комиссия «Полоцкий государственный экономический колледж»" Height="1000" Width="1122"
-        x:Name="MainWorkingWindowForm" Loaded="MainWorkingWindow_Loaded" Background="#FFF6F7FA" SizeChanged="MainWorkingWindowForm_SizeChanged" Closed="MainWorkingWindowForm_Closed" Icon="/PriyemnayaKomissiya;component/Resources/ico.ico" MinWidth="1000">
+        x:Name="MainWorkingWindowForm" Loaded="MainWorkingWindow_Loaded" Background="#FFF6F7FA" SizeChanged="MainWorkingWindowForm_SizeChanged" Closed="MainWorkingWindowForm_Closed" Icon="/PriyemnayaKomissiya;component/Resources/ico.ico" MinWidth="1000" WindowStartupLocation="CenterScreen">
     <Grid Background="#0894A1BB">
         <Grid.RowDefinitions>
             <RowDefinition Height ="80"/>
@@ -64,7 +64,7 @@
         <!--#endregion-->
         <!--#region Планы приема-->
         <Grid x:Name="MainGrid" Margin="10,32,0,0" Visibility="Visible" Grid.Column="1" Grid.Row="2">
-            <Label Name="lbPlanPriema" Content="ПЛАН ПРИЁМА 2021" HorizontalAlignment="Left" Margin="39,13,0,0" VerticalAlignment="Top" FontFamily="{StaticResource Montserrat-Regular}" FontSize="14" Foreground="#FF76829B" Height="26" Width="382"/>
+            <Label Name="lbPlanPriema" Content="ПЛАН ПРИЁМА 2022" HorizontalAlignment="Left" Margin="39,13,0,0" VerticalAlignment="Top" FontFamily="{StaticResource Montserrat-Regular}" FontSize="14" Foreground="#FF76829B" Height="26" Width="382"/>
             <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="0,44,0,0">
                 <Grid x:Name="grdAdmissionPlans" Grid.Column="2" RenderTransformOrigin="0.5,0.5">
                     <Grid.RowDefinitions>
@@ -284,7 +284,7 @@
                     <TextBlock Style="{DynamicResource TextBlock1}" Margin="10,44,10,0"><Run Text="Место работы: " FontWeight="Bold"/><InlineUIContainer>
                             <TextBlock x:Name="infoMestoRaboti" Text="" Style="{DynamicResource TextBlock2}" Height="24" Width="470"/>
                         </InlineUIContainer></TextBlock>
-                    <TextBlock Style="{DynamicResource TextBlock1}" Margin="10,44,10,0" Grid.Column="1"><Run Text="Занимаемая должность: " FontWeight="Bold"/><InlineUIContainer>
+                    <TextBlock Style="{DynamicResource TextBlock1}" Margin="0,44,10,0" Grid.Column="1"><Run Text="Занимаемая должность: " FontWeight="Bold"/><InlineUIContainer>
                             <TextBlock x:Name="infoDoljnost" Text="" Style="{DynamicResource TextBlock2}" Height="30" Width="485"/>
                         </InlineUIContainer></TextBlock>
                 </Grid>
@@ -298,18 +298,18 @@
                     <TextBlock Style="{DynamicResource TextBlock1}" Margin="10,44,10,10"><Run Text="Владелец: " FontWeight="Bold"/><InlineUIContainer>
                             <TextBlock x:Name="infoVladelec" Text="" Style="{DynamicResource TextBlock2}" Height="29" Width="475"/>
                         </InlineUIContainer></TextBlock>
-                    <TextBlock x:Name="infoRedaktorTB" Style="{DynamicResource TextBlock1}" Margin="10,44,10,10" Grid.Column="1"><Run Text="Редактор: " FontWeight="Bold"/><InlineUIContainer>
+                    <TextBlock x:Name="infoRedaktorTB" Style="{DynamicResource TextBlock1}" Margin="0,44,10,10" Grid.Column="1"><Run Text="Редактор: " FontWeight="Bold"/><InlineUIContainer>
                             <TextBlock x:Name="infoRedaktor" Text="" Style="{DynamicResource TextBlock2}" Height="27" Width="546"/>
                         </InlineUIContainer></TextBlock>
                     <TextBlock Style="{DynamicResource TextBlock1}" Margin="10,85,10,10"><Run Text="Дата ввода: " FontWeight="Bold"/><InlineUIContainer>
                             <TextBlock x:Name="infoDateVvoda" Text="" Style="{DynamicResource TextBlock2}" Height="23" Width="463"/>
                         </InlineUIContainer></TextBlock>
-                    <TextBlock x:Name="infoDateRedactTB" Style="{DynamicResource TextBlock1}" Margin="10,85,10,10" Grid.Column="1"><Run Text="Дата редактирования: " FontWeight="Bold"/><InlineUIContainer>
+                    <TextBlock x:Name="infoDateRedactTB" Style="{DynamicResource TextBlock1}" Margin="0,85,10,10" Grid.Column="1"><Run Text="Дата редактирования: " FontWeight="Bold"/><InlineUIContainer>
                             <TextBlock x:Name="infoDateRedact" Text="" Style="{DynamicResource TextBlock2}" Height="26" Width="456"/>
                         </InlineUIContainer></TextBlock>
                 </Grid>
                 <TabControl Grid.Column="1" Style="{DynamicResource TabControlStyle}" Grid.Row="4" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="284">
-                    <TabItem Margin="10,0,-33,0" Header="Аттестат" Style="{DynamicResource TabItemStyle}">
+                    <TabItem Margin="10,0,-33,0" Header="Документы об образовании" Style="{DynamicResource TabItemStyle}">
                         <Grid Background="White">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="993*"/>
@@ -317,7 +317,7 @@
                                 <ColumnDefinition Width="17"/>
                             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal" Margin="0,0,0,183" Grid.ColumnSpan="3" >
-                <Label Content="Оценки в аттестате" FontFamily="{StaticResource Montserrat-Regular}" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,17,0,3" Height="43" MinHeight="32" Width="149"/>
+                <Label Content="Документы об образовании" FontFamily="{StaticResource Montserrat-Regular}" FontSize="14" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="20,17,0,3" Height="43" MinHeight="32" Width="192"/>
                 <TextBlock x:Name="atestatCount" MinHeight="14"  FontFamily="{StaticResource Montserrat-Regular}" FontSize="12" Background="#FFE4E3E3" VerticalAlignment="Center" TextAlignment="Center" MaxWidth="30" Width="24" Margin="0,23,0,26" Foreground="#FF747474" Height="9"/>
             </StackPanel>
             <DataGrid x:Name="AtestatGrid" Style="{DynamicResource dgAbbiturients}" Margin="0,58,0,10" Grid.ColumnSpan="3" HeadersVisibility="Column">
@@ -363,7 +363,7 @@
                 <TextBox Visibility="Hidden" Margin="0,10,0,200" Style="{DynamicResource textboxSearch}" Text="" Background="#2676829B" Foreground="#FF76829B" Grid.Column="1"/>
                         </Grid>
                     </TabItem>
-                    <TabItem Margin="65,0,-95,0" Header="Cертификат ЦТ" Style="{DynamicResource TabItemStyle}">
+                    <TabItem Margin="65,0,-95,0" Header="Cертификаты ЦТ" Style="{DynamicResource TabItemStyle}">
                         <Grid Background="#FFE5E5E5">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="993*"/>
@@ -507,7 +507,7 @@
                                         <StackPanel Width="201">
                                             <CheckBox Height="15" Style="{DynamicResource CheckBoxStyleObshchiy}" Content="Инвалиды I и II группы" Margin="20,10,0,0"/>
                                             <CheckBox Height="15" Style="{DynamicResource CheckBoxStyleObshchiy}" Content="Дети военнослужащих" Margin="20,10,0,0"/>
-                                            <CheckBox Height="15" Style="{DynamicResource CheckBoxStyleObshchiy}" Content="Диплом с отличием" Margin="20,10,0,0"/>
+                                            <CheckBox Visibility="Hidden" Height="15" Style="{DynamicResource CheckBoxStyleObshchiy}" Content="Диплом с отличием" Margin="20,10,0,0"/>
                                         </StackPanel>
                                         <StackPanel Width="183">
                                             <CheckBox Height="15" Style="{DynamicResource CheckBoxStyleObshchiy}" Content="Инвалиды III группы" Margin="20,10,0,0"/>
@@ -544,7 +544,7 @@
                                 <ScrollViewer x:Name="ScrollAddAtestats" Foreground="{StaticResource font}" VerticalScrollBarVisibility="Visible" FontWeight="Normal" FontSize="14" FontFamily="{StaticResource Montserrat-Regular}">
                                 <StackPanel x:Name="addEdifFormAtestati" VerticalAlignment="Top" Width="833" >
                                      
-                                <Button Style="{DynamicResource ButtonStyleObshchiyRED}" Background="{StaticResource 1A95B0}" Height="53" Margin="166,25,167,0" Content="ДОБАВИТЬ ДОКУМЕНТ" Click="Button_NewAtestat"/>
+                                <Button Style="{DynamicResource ButtonStyleObshchiyRED}" Background="{StaticResource 1A95B0}" Height="53" Margin="166,25,167,0" Content="ДОБАВИТЬ ДОКУМЕНТ ОБ ОБРАЗОВАНИИ" Click="Button_NewAtestat"/>
                                 <StackPanel Orientation="Horizontal" Width="500" Height="88" Margin="166,0,167,0">
                                     <Button Style="{DynamicResource ButtonStyleObshchiyRED}" Foreground="{StaticResource 94A1BB}" Background="#3376829B" Height="53" Margin="0,10,0,0" Content="ПРЕДЫДУЩИЙ ЭТАП" Width="235" Click="Button_PrewPage"/>
                                     <Button Style="{DynamicResource ButtonStyleObshchiyRED}" Height="53" Margin="30,10,0,0" Content="СЛЕДУЮЩИЙ ЭТАП" Width="235" Click="Button_NextStep_3"/>
